convert to jekyll project

--- a/index.html
+++ b/index.html
@@ -1,43 +1,16 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en">
+---
+layout: default
+---
+<!-- index.html -->
+<canvas id="drawingArea"></canvas>
 
-<head>
-	<title>Connection#2 | Behrooz Tahanzadeh</title>
+<div id="help">
+	Click into white area on two different points...<br>
+</div>
 
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript" />
-	<meta name="author" content="Behrooz Tahahnzadeh" />
-	<link rel="author" href="https://plus.google.com/104161319584949933737?rel=author"/>
-	<meta property="article:publisher" content="https://www.facebook.com/behrooz.tahanzadeh" />
+<input id="tail" type="range" name="points" min="0" max="1" step="0.01" value="1">
 
-	<link rel="stylesheet" href="style.css">
-
-	<script type='text/javascript' src='http://code.jquery.com/jquery-2.0.3.min.js'></script>
-	<script type='text/javascript' src='js/Point2D.js'></script>
-	<script type='text/javascript' src='js/Keyboard.js'></script>
-	<script type='text/javascript' src='js/Dot.js'></script>
-	<script type='text/javascript' src='js/Connection.js'></script>
-	<script type='text/javascript' src='js/Main.js'></script>
-</head>
-
-<body style="cursor:copy;">
-	<canvas id="drawingArea"></canvas>
-	
-	<div id="info">
-		<div>
-		 <span style="font-weight: bold">[Connection #2]</span> Developed By <a href="http://b-tz.com">Behrooz Tahanzadeh</a> - August 2014
-		</div>
-	</div>
-	
-	<div id="pp">
-		pause
-	</div>
-	
-	<div id="help">
-		Click into white area on two different points!
-	</div>
-	
-	<input id="tail" type="range" name="points" min="0" max="1" step="0.01" value="1">
-</body>
-</html>
+<div id="pp">
+	pause
+</div>
+<!-- index.html -->
